include(${PROJECT_SOURCE_DIR}/cmake/create_test.cmake)

add_subdirectory(base)
add_subdirectory(components)
add_subdirectory(distributed)
add_subdirectory(factorization)
add_subdirectory(matrix)
if(GINKGO_BUILD_MPI)
    add_subdirectory(mpi)
endif()
add_subdirectory(multigrid)
add_subdirectory(preconditioner)
add_subdirectory(solver)
add_subdirectory(stop)
