add_executable(spmv spmv.cpp)
target_link_libraries(spmv ginkgo gflags rapidjson)
if (GINKGO_BUILD_CUDA)
    ginkgo_benchmark_cusp_linops(spmv)
endif()
if (GINKGO_BUILD_HIP)
    target_compile_definitions(spmv PRIVATE HAS_HIP=1)
    EXECUTE_PROCESS(COMMAND ${HIP_PATH}/bin/hipconfig --cpp_config OUTPUT_VARIABLE HIP_CXX_FLAGS)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${HIP_CXX_FLAGS}")
    target_include_directories(spmv SYSTEM PRIVATE /opt/rocm/hsa/include/ ${HIP_INCLUDE_DIRS} ${HIPBLAS_INCLUDE_DIRS} ${HIPSPARSE_INCLUDE_DIRS} ${GINKGO_HIP_THRUST_PATH}) 
    target_link_libraries(spmv ${HSA_LIBRARY} "/opt/rocm/lib/libhip_hcc.so" "/opt/rocm/lib/libhipsparse.so")
endif()
