add_executable(spmv spmv.cpp)
target_link_libraries(spmv ginkgo gflags rapidjson)
if (GINKGO_BUILD_CUDA)
    ginkgo_benchmark_cusp_linops(spmv)
endif()
if (GINKGO_BUILD_HIP)
    target_compile_definitions(spmv PRIVATE HAS_HIP=1)
    EXECUTE_PROCESS(COMMAND ${HIP_PATH}/bin/hipconfig --cpp_config OUTPUT_VARIABLE HIP_CXX_FLAGS)
    set_target_properties(spmv PROPERTIES COMPILE_FLAGS ${HIP_CXX_FLAGS})
    target_include_directories(spmv SYSTEM PRIVATE ${HSA_HEADER} ${HIP_INCLUDE_DIRS} ${HIPBLAS_INCLUDE_DIRS} ${HIPSPARSE_INCLUDE_DIRS})
    if(GINKGO_HIP_PLATFORM MATCHES "hcc")
        target_link_libraries(spmv "${HIP_PATH}/lib/libhip_hcc.so" )
    else()
        target_link_libraries(spmv ${CUDA_LIBRARIES})
    endif()
    target_link_libraries(spmv "${HIPSPARSE_PATH}/lib/libhipsparse.so")
endif()
